--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -3,10 +3,13 @@ api_platform:
     version: 1.0.0
     formats:
         jsonld: ['application/ld+json']
+        json: ['application/json']
+        multipart:  ['multipart/form-data']
     docs_formats:
         jsonld: ['application/ld+json']
         jsonopenapi: ['application/vnd.openapi+json']
         html: ['text/html']
+       
     defaults:
         stateless: true
         cache_headers:
