--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,6 +1,7 @@
 api_platform:
     title: Hello API Platform
     version: 1.0.0
+    mercure: true
   
     formats:
         jsonld: ['application/ld+json' ]
