--- a/.env
+++ b/.env
@@ -36,9 +36,20 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
 # The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
-MERCURE_URL=http://mercure/.well-known/mercure
+MERCURE_URL=http://127.0.0.1:5000/.well-known/mercure
 # The public URL of the Mercure hub, used by the browser to connect
-MERCURE_PUBLIC_URL=http://mercure/.well-known/mercure
+MERCURE_PUBLIC_URL=http://127.0.0.1:5000/.well-known/mercure
 # The secret used to sign the JWTs
-MERCURE_JWT_SECRET="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJtZXJjdXJlIjp7InB1Ymxpc2giOlsiKiJdfX0.vpV9_d4uQeqNczcI2ebcHilEGHu5OxY5rozFIBVEdxw"
+MERCURE_JWT_SECRET="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJtZXJjdXJlIjp7InB1Ymxpc2giOlsiKiJdfX0.a8cjcSRUAcHdnGNMKifA4BK5epRXxQI0UBp2XpNrBdw"
 ###< symfony/mercure-bundle ###
+
+
+###> symfony/mailer ###
+#MAILER_DSN=null://null
+MAILER_DSN=smtp://bonasenesa@gmail.com:kuav%20moeu%20idzk%20pyyo@smtp.gmail.com:587?verify_peer=false&timeout=30
+
+###< symfony/mailer ###
+REDIS_URL=redis://127.0.0.1:6379
+
+
+
