--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,15 @@
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.30",
+        "predis/predis": "^2.3",
         "symfony/asset": "7.1.*",
+        "symfony/cache": "7.1.*",
         "symfony/console": "7.1.*",
         "symfony/dotenv": "7.1.*",
         "symfony/expression-language": "7.1.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.1.*",
+        "symfony/mailer": "7.1.*",
         "symfony/mercure-bundle": "^0.3.9",
         "symfony/property-access": "7.1.*",
         "symfony/property-info": "7.1.*",
