--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,6 +13,14 @@ services:
    
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
+
+
+    app.redis:
+        class: Redis
+        factory: ['Redis', 'connect']
+        arguments:
+            - '%env(REDIS_URL)%'
+
     App\:
         resource: '../src/'
         exclude:
